--- a/app/web/organizations/templates/organizations/federation_delete_form.html
+++ b/app/web/organizations/templates/organizations/federation_delete_form.html
@@ -30,16 +30,16 @@
             {% for user in object.user_list.all %}
             <tr>
                 <td>
-                    {{user.username}}
+                    {{ user.username }}
                 </td>
                 <td>
-                    {{user.first_name}}
+                    {{ user.first_name }}
                 </td>
                 <td>
-                    {{user.last_name}}
+                    {{ user.last_name }}
                 </td>
                 <td>
-                    {{user.user_type|user_type_verbose}}
+                    {{ user.user_type_names }}
                 </td>
                 <td>
                     <a href="{% url 'update_user' user.id %}?next={% url 'federation_delete' object.id %}">Wijzig</a>
