--- a/app/web/core/templates/core/pagination.html
+++ b/app/web/core/templates/core/pagination.html
@@ -4,7 +4,7 @@
     <ul>
         {% if object_list.has_previous %}
             <li class="pagination-link--previous">
-                <a href="?page={{ object_list.previous_page_number }}{{ filter_params }}">
+                <a href="?page={{ object_list.previous_page_number }}{{ filter_params }}{{ search_params }}">
                     <svg width="12" height="18">
                         <use href="#chevron-left" xlink:href="#chevron-left" width="12" height="18"></use>
                     </svg>
@@ -15,7 +15,7 @@
 
         {% if object_list.number > 3 %}
             <li>
-                <a href="?page=1{{ filter_params }}">1</a>
+                <a href="?page=1{{ filter_params }}{{ search_params }}">1</a>
             </li>
             {% if object_list.number > 4 %}
                 <li><span class="pagination-ellipsis">...</span></li>
@@ -28,7 +28,7 @@
                     {% if p == object_list.number %}
                         <span>{{ p }}</span>
                     {% else %}
-                        <a href="?page={{ p }}{{ filter_params }}">{{ p }}</a>
+                        <a href="?page={{ p }}{{ filter_params }}{{ search_params }}">{{ p }}</a>
                     {% endif %}
                 </li>
             {% endif %}
@@ -39,7 +39,7 @@
                 <li><span class="pagination-ellipsis">...</span></li>
             {% endif %}
             <li>
-                <a href="?page={{ object_list.paginator.num_pages }}{{ filter_params }}">
+                <a href="?page={{ object_list.paginator.num_pages }}{{ filter_params }}{{ search_params }}">
                     {{ object_list.paginator.num_pages }}
                 </a>
             </li>
@@ -47,7 +47,7 @@
 
         {% if object_list.has_next %}
             <li class="pagination-link--next">
-                <a href="?page={{ object_list.next_page_number }}{{ filter_params }}">
+                <a href="?page={{ object_list.next_page_number }}{{ filter_params }}{{ search_params }}">
                     Volgende
                     <svg width="12" height="18">
                         <use href="#chevron-right" xlink:href="#chevron-right" width="12" height="18"></use>
