--- a/app/web/cases/templates/cases/case_list_page.html
+++ b/app/web/cases/templates/cases/case_list_page.html
@@ -29,6 +29,7 @@
             <div class="help-text">Zoek cliënten op Voornaam, Achternaam, E-mailadres en/of Geboortedatum (dd-mm-jjjj).</div>
             {{ form.search }}
         </div>
+        <a href="{% url 'cases_by_profile' %}" class="button button--secondary u-margin-right">Filters wissen</a>
         <button type="submit">Filter</button>
     </form>
 
