--- a/app/web/cases/templates/cases/case_list_page_wonen.html
+++ b/app/web/cases/templates/cases/case_list_page_wonen.html
@@ -34,6 +34,7 @@
             {{ form.f }}
             {{ form.search }}
         </div>
+        <a href="{% url 'case_list' %}" class="button button--secondary u-margin-right">Filters wissen</a>
         <button type="submit">Filter</button>
     </form>
 
