--- a/app/web/cases/templates/cases/case_list_archive.html
+++ b/app/web/cases/templates/cases/case_list_archive.html
@@ -22,6 +22,7 @@
             <div class="help-text">Zoek cliënten op Voornaam, Achternaam, E-mailadres en/of Geboortedatum (dd-mm-jjjj).</div>
             {{ form.search }}
         </div>
+        <a href="{% url 'case_archive' %}" class="button button--secondary u-margin-right">Filters wissen</a>
         <button type="submit">Filter</button>
     </form>
 
