Change Annuleer to Annuleren

--- a/app/web/cases/templates/cases/document_create_form.html
+++ b/app/web/cases/templates/cases/document_create_form.html
@@ -16,7 +16,7 @@
     </button>
     <h2>Bijlage uploaden</h2>
     <hr />
-    
+
     <form method="post" enctype="multipart/form-data" novalidate>{% csrf_token %}
         <div class="form-field">
             {% if form.errors %}
@@ -87,7 +87,7 @@
             <input type="hidden" name="next" value="{{ request.GET.next }}{% if request.GET.hash %}#{{ request.GET.hash }}{% endif %}">
             {% endif %}
             <input type="submit" value="Upload" class="button button--primary" data-handler="show-loading">
-            <a href="#" class="button button--secondary" data-handler="modal-close">Annuleer</a>
+            <a href="#" class="button button--secondary" data-handler="modal-close">Annuleren</a>
         </div>
     </form>
 </div>
