--- a/app/web/cases/templates/cases/case_clean_form.html
+++ b/app/web/cases/templates/cases/case_clean_form.html
@@ -13,7 +13,7 @@
 
 {% block main %}
     <h2>{{form_config.form_config_slug|form_verbose}}</h2>
-    
+
     <p>De huidige status van het formulier:</p>
     {% include 'cases/status/current.html' with object=case_status %}
 
@@ -35,7 +35,7 @@
 
 
         <div class="form-navigation">
-            <a href="{% url 'case' object.id %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'case' object.id %}" class="button button--secondary">Annuleren</a>
             <span></span>
             <button class=" button--next" type="submit">
                 <span class="value">Volgende</span>
@@ -57,9 +57,9 @@
         <dd>
             {{v}}
         </dd>
-        
+
     {% endfor %}
     </dl> {% endcomment %}
-    
+
 
 {% endblock %}
