--- a/app/web/cases/templates/cases/case_create_address_form.html
+++ b/app/web/cases/templates/cases/case_create_address_form.html
@@ -19,14 +19,14 @@
         {% csrf_token %}
 
         <fieldset class="section section--step section--incomplete">
-            
+
             <legend>
                 <h3 class="section--step__title">
                     Wat is het adres van {{ form.instance.client_name }}?
                 </h3>
             </legend>
-                
-            <div class="section sub-section">    
+
+            <div class="section sub-section">
                 <div class="form-field form-field--textinput">
                     <label for="{{ form.adres_straatnaam.id_for_label }}">{{ form.adres_straatnaam.label }} *</label>
                     {{ form.adres_straatnaam }}
@@ -69,10 +69,10 @@
                 </div>
             </div>
         </fieldset>
-        
+
         {% if request.GET.next %}
         <div class="form-navigation">
-            <a href="{% url 'case' object.id %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'case' object.id %}" class="button button--secondary">Annuleren</a>
             <span></span>
             <button class=" button--next" type="submit">
                 <span class="value">Volgende</span>
@@ -82,7 +82,7 @@
         {% else %}
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Opslaan" class="button button--primary">
-            <a href="{% url 'cases_by_profile' %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'cases_by_profile' %}" class="button button--secondary">Annuleren</a>
         </div>
         {% endif %}
     </form>
