--- a/app/web/cases/templates/cases/case_create_form.html
+++ b/app/web/cases/templates/cases/case_create_form.html
@@ -50,9 +50,9 @@
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Opslaan" class="button button--primary">
             {% if mode == 'page' %}
-            <a href="{% url 'cases_by_profile' %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'cases_by_profile' %}" class="button button--secondary">Annuleren</a>
             {% else %}
-            <a href="#" data-handler='modal-close' class="button button--secondary">Annuleer</a>
+            <a href="#" data-handler='modal-close' class="button button--secondary">Annuleren</a>
             {% endif %}
         </div>
     </form>
