--- a/app/web/cases/templates/cases/case_delete.html
+++ b/app/web/cases/templates/cases/case_delete.html
@@ -30,8 +30,8 @@
 
         <div class="form-field form-field--buttons screen-only">
             <input type="submit" value="Cliënt defintief verwijderen" class="button button--primary">
-            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleer</a>
+            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleren</a>
         </div>
     </form>
-</div> 
+</div>
 {% endblock %}
