--- a/app/web/cases/templates/cases/case_delete_form.html
+++ b/app/web/cases/templates/cases/case_delete_form.html
@@ -21,7 +21,7 @@
 
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Verwijder" class="button button--secondary">
-            <a href="{% url 'cases_by_profile' %}" class="button button--primary">Annuleer</a>
+            <a href="{% url 'cases_by_profile' %}" class="button button--primary">Annuleren</a>
         </div>
     </form>
 {% endblock %}
