--- a/app/web/cases/templates/cases/case_delete_request.html
+++ b/app/web/cases/templates/cases/case_delete_request.html
@@ -42,8 +42,8 @@
         {{ form.as_p }}
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Stuur verzoek 'verwijderen cliënt' naar Wonen" class="button button--primary">
-            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleer</a>
+            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleren</a>
         </div>
     </form>
-</div>    
+</div>
 {% endblock %}
