--- a/app/web/cases/templates/cases/case_delete_request_revoke.html
+++ b/app/web/cases/templates/cases/case_delete_request_revoke.html
@@ -37,8 +37,8 @@
         </div>
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Cliënt terugzetten in omslagroute" class="button button--primary">
-            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleer</a>
+            <a href="#" data-handler="modal-close" class="button button--secondary">Annuleren</a>
         </div>
     </form>
-</div>    
+</div>
 {% endblock %}
