--- a/app/web/documents/templates/documents/document_and_docversion_create_form.html
+++ b/app/web/documents/templates/documents/document_and_docversion_create_form.html
@@ -25,7 +25,7 @@
                     {% for field in form %}
                         {% for error in field.errors %}
                             <li>
-                                <a href="#{{field.id_for_label }}">{{field.label}}</a>: 
+                                <a href="#{{field.id_for_label }}">{{field.label}}</a>:
                                 {{ error|escape }}
                             </li>
                         {% endfor %}
@@ -117,7 +117,7 @@
 
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Uploaden" class="button button--primary">
-            <a href="{% url 'home' %}?#processtap-{{ moment_id }}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'home' %}?#processtap-{{ moment_id }}" class="button button--secondary">Annuleren</a>
         </div>
     </form>
 {% endblock %}
