--- a/app/web/organizations/templates/organizations/federation_create_form.html
+++ b/app/web/organizations/templates/organizations/federation_create_form.html
@@ -22,7 +22,7 @@
 
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Aanmaken" class="button button--primary">
-            <a href="{% url 'federation_list' %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'federation_list' %}" class="button button--secondary">Annuleren</a>
         </div>
     </form>
 {% endblock %}
