--- a/app/web/organizations/templates/organizations/federation_delete_form.html
+++ b/app/web/organizations/templates/organizations/federation_delete_form.html
@@ -53,7 +53,7 @@
         {% csrf_token %}
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Verwijderen" class="button button--primary">
-            <a href="{% url 'federation_update' object.id %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'federation_update' object.id %}" class="button button--secondary">Annuleren</a>
         </div>
     </form>
 {% endblock %}
