--- a/app/web/timeline/templates/timeline/snippets/moment_section_new.html
+++ b/app/web/timeline/templates/timeline/snippets/moment_section_new.html
@@ -152,8 +152,8 @@
 
             <div data-edit-mode class="form-field form-field--buttons screen-only">
                 <button class="button button--primary" data-handler="save-moment" disabled="disabled">Opslaan</button>
-                <button class="button button--secondary" data-handler="exit-edit-moment" disabled="disabled">Annuleer</button>
-                <button class="button button--secondary" data-handler="exit-new-moment" disabled="disabled">Annuleer</button>
+                <button class="button button--secondary" data-handler="exit-edit-moment" disabled="disabled">Annuleren</button>
+                <button class="button button--secondary" data-handler="exit-new-moment" disabled="disabled">Annuleren</button>
             </div>
         </div>
     </details>
