--- a/app/web/users/templates/users/user_federation_delete.html
+++ b/app/web/users/templates/users/user_federation_delete.html
@@ -28,7 +28,7 @@
 
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
             <input type="submit" value="Verwijderen" class="button button--primary">
-            <a href="{% url 'federation_user_list' %}" class="button button--secondary">Annuleer</a>
+            <a href="{% url 'federation_user_list' %}" class="button button--secondary">Annuleren</a>
         </div>
     </form>
 {% endblock %}
