--- a/app/web/users/templates/users/federation_user_list_page.html
+++ b/app/web/users/templates/users/federation_user_list_page.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load auth_tags %}
 
 {% block title %} - Alle gebruikers van {{ request.user.federation.name }}{% endblock %}
 
@@ -16,11 +17,13 @@
         <div class="flex-item">
             <h2>Alle gebruikers van {{ request.user.federation.name }}</h2>
         </div>
+        {% if request.user|is_beheerder %}
         <div class="flex-item u-text-align--right">
             <div class="form-field form-field--buttons screen-only">
                 <a href="{% url 'create_user_federation' %}" class="button button--primary">Nieuwe gebruiker</a>
             </div>
         </div>
+        {% endif %}
     </div>
 
     <form method="get" class="u-margin-bottom-2x">
