--- a/app/web/cases/templates/cases/case_update_address_form.html
+++ b/app/web/cases/templates/cases/case_update_address_form.html
@@ -66,7 +66,7 @@
 
             <legend>
                 <h3 class="section--step__title">
-                    Wat is het adres van {{ form.instance.client_name }}?
+                    Wat is het adres van de omslagwoning voor {{ form.instance.client_name }}?
                 </h3>
             </legend>
 
