101127 added notification alerts for misfunctioning webapp

--- a/app/static_src/sass/basics/_06_site-layout.scss
+++ b/app/static_src/sass/basics/_06_site-layout.scss
@@ -180,3 +180,14 @@ footer {
     top: 0;
     transition: margin-top .3s ease-in-out;
 }
+
+.alert-wrapper {
+    width: 100%;
+}
+
+.alert-message {
+    padding: 15px;
+    background-color: #FF9100;
+    color: white;
+    text-align: center;
+}
