--- a/app/web/cases/templates/cases/case_invite.html
+++ b/app/web/cases/templates/cases/case_invite.html
@@ -61,6 +61,7 @@
             {{ wizard.form }}
         {% endif %}
 
+        <a href="{% url 'case_invite_users_federation' instance.id %}">Samenwerken met iemand van een andere organisatie</a>
 
         <div class="form-field form-field--buttons screen-only u-margin-top-2x">
             {% if wizard.steps.prev %}
