--- a/app/web/forms/templates/forms/checkbox_option_document.html
+++ b/app/web/forms/templates/forms/checkbox_option_document.html
@@ -4,7 +4,7 @@
 
 <div>
     <span>
-        <a href="{% url 'download_case_document' document.case.id document.id %}" target="_blank" rel="noopener noreferrer">
+        <a href="{% url 'view_case_document' document.case.id document.id %}" target="_blank" rel="noopener noreferrer">
             {{ document.name }}
         </a>
     </span>
