Enhance styling for better text wrapping and alignment in various components

--- a/app/static_src/sass/basics/_08_tables.scss
+++ b/app/static_src/sass/basics/_08_tables.scss
@@ -138,6 +138,8 @@ table table {
 
     td {
         max-width: 200px;
+        overflow-wrap: break-word;
+        word-break: break-word;
      }
 }
 .moment-list {
