--- a/app/static_src/sass/basics/_06_site-layout.scss
+++ b/app/static_src/sass/basics/_06_site-layout.scss
@@ -91,6 +91,7 @@ body {
     margin-top: 1rem;
     grid-column: span 2;
     max-width: 260px;
+    overflow-wrap: break-word;
 
     p {
         margin-bottom: 0;
