--- a/app/static_src/sass/basics/_07_forms.scss
+++ b/app/static_src/sass/basics/_07_forms.scss
@@ -969,3 +969,8 @@ select {
     padding: 0 16px;
     margin-top: 28px;
  }
+
+ .button-span-svg {
+    display: inline-flex;
+    margin-right: .3rem;
+ }
