WON-88 Add 'Stadsdeel' field to Case model and update related forms and templates; enhance styling and add suggestions component for searching address

--- a/app/static_src/sass/basics/_04_helper-classes.scss
+++ b/app/static_src/sass/basics/_04_helper-classes.scss
@@ -50,7 +50,7 @@
 
 .show-on-mobile {
     display: block;
-    font-weight: 500;
+    font-weight: bold;
     @media screen and (min-width: $tablets) {
         display: none;
     }
