--- a/app/static_src/sass/components/_alert.scss
+++ b/app/static_src/sass/components/_alert.scss
@@ -47,7 +47,7 @@
     height: 2.75rem;
     color: $primary-white;
     margin: 0 auto;
-    max-width: 60rem;
+    max-width: $site-max-width;
     display: flex;
     align-items: center;
 
