--- a/app/static_src/sass/main.scss
+++ b/app/static_src/sass/main.scss
@@ -34,4 +34,5 @@
     "components/modal",
     "components/pagination",
     "components/footer",
-    "components/prompt";
+    "components/prompt",
+    "components/suggestions";
