--- a/app/web/cases/templates/cases/snippets/case_address.html
+++ b/app/web/cases/templates/cases/snippets/case_address.html
@@ -11,6 +11,10 @@
             </dd>
         </div>
         <div>
+            <dt>Stadsdeel: </dt>
+            <dd>{{ object.adres_stadsdeel|default:"Onbekend" }}</dd>
+        </div>
+        <div>
             <dt>Woningcorporatie: </dt>
             <dd>{{ object.woningcorporatie }}</dd>
         </div>
