--- a/app/static_src/sass/basics/_07_forms.scss
+++ b/app/static_src/sass/basics/_07_forms.scss
@@ -333,6 +333,7 @@ body:not(:-moz-handler-blocked) fieldset {
         bottom: -80px;
     }
 }
+
 // ********************
 // HELPFUL INFORMATION
 // ********************
@@ -764,27 +765,18 @@ li:focus-within .form-field__checkboxlabel::before {
 
 select {
     width: 100%;
-    height:2.5rem;
     font-size: 1rem;
     background-color: rgb(255, 255, 255);
     background-image: url("/static/images/chevron-down.svg");
     background-size: .75rem;
+    appearance: none;
     -webkit-appearance: none;
     cursor: pointer;
-    box-shadow: rgb(118, 118, 118) 0 0 0 .063rem inset;
-    padding: 0 .75rem;
-    border-width: 0;
-    border-style: initial;
-    border-color: initial;
-    border-image: initial;
-    border-radius: 0;
     background-position: calc(100% - .75rem) 50%;
     background-repeat: no-repeat;
     text-transform: none;
-
     font-family: inherit;
     font-size: 100%;
-    line-height: 1.15;
 
     /* IE11 (hide native arrow button) */
     &::-ms-expand {
