--- a/app/static_src/sass/components/_site-navigation.scss
+++ b/app/static_src/sass/components/_site-navigation.scss
@@ -4,7 +4,7 @@
     padding: 0;
     height: 2.75rem;
     margin: 0 auto;
-    max-width: 60rem;
+    max-width: $site-max-width;
     display: flex;
 
     font-size: 1.125rem;
@@ -53,7 +53,7 @@
 
         font-size: 1rem;
 
-        box-shadow: (((60rem - 87.5rem) / 2) + .938rem) 0 0 0 $neutral-grey1, (((87.5rem - 60rem) / 2) - .938rem) 0 0 0 $neutral-grey1;
+        box-shadow: ((($site-max-width - 87.5rem) / 2) + .938rem) 0 0 0 $neutral-grey1, (((87.5rem - $site-max-width) / 2) - .938rem) 0 0 0 $neutral-grey1;
 
         top: 100%;
         left: -.938rem;
